fixed bug and layout issue

--- a/datazilla/webapp/static/css/apps.css
+++ b/datazilla/webapp/static/css/apps.css
@@ -172,3 +172,6 @@ div.app-no-data-message {
     left: 50%;
     margin-left: -13px;
 }
+button:hover {
+    cursor:pointer;
+}
